force-app/main/default/objects/lcon__Lead_Employee__c/fields/lcon__Contact__c.field-meta.xml
<CustomField>
    <fullName>lcon__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Lead Employees</relationshipLabel>
    <relationshipName>Lead_Employees</relationshipName>
    <type>Lookup</type>
</CustomField>