force-app/main/default/objects/lcon__Lead_Employee__c/fields/lcon__Lead__c.field-meta.xml
<CustomField>
    <fullName>lcon__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Lead Employees</relationshipLabel>
    <relationshipName>Lead_Employees</relationshipName>
    <type>Lookup</type>
</CustomField>