force-app/main/default/objects/lcon__Lead_Employee__c/fields/lcon__Organization__c.field-meta.xml
<CustomField>
    <fullName>lcon__Organization__c</fullName>
    <label>Organization</label>
    <length>32</length>
    <type>Text</type>
</CustomField>