force-app/main/default/objects/lcon__Lead_Employee__c/listViews/lcon__All.listView-meta.xml
<ListView>
    <fullName>lcon__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>